# moodle-clone

./: .gitignore  AcademicMember.h  AppConfig.h.in  CMakeLists.txt  Course.h  Date.h  ProjectRequirements.md  README.md  Session.h  TODO  compile_commands.json  createNewCourse.cpp  enrollCourse.cpp  main.cpp  schoolyear.txt  scoreboard.csv  st2.csv  test_date.cpp  test_table.cpp
Personnel/: AcademicMember.h  Class.cpp  Class.h  Student.cpp  Student.csv  Student.h
School/: Course.cpp  Course.h  RegistrationSession.hpp  SchoolYear.cpp  SchoolYear.h  Score.cpp  Score.h  Semester.cpp  Semester.h  Session.h
UserInterface/: App.cpp  App.h  Greeting.cpp  Greeting.h  ImportScoreboard.cpp  Menu.cpp  Menu.h  Menu.hpp  StudentViewScoreboard.cpp  Table.cpp  Table.hpp  Text.hpp  UpdateCourse.cpp  ViewCourseScoreboard.cpp  ViewEnrollCourse.cpp  ViewListOfCourse.cpp  ViewScoreboard.cpp  app.cpp  createNewCourse.cpp  enrollCourse.cpp
UserInterface/Menu/: Login.cpp  (+30 more)
data/: AcademicMemberLoginInfo.csv  Member.csv  RegistrationTime.txt  Student.csv  StudentLoginInfo.csv  schoolyear.txt
test/: test_ansi.cpp  test_course.cpp  test_linked_list.cpp  test_score.cpp  test_scoreboard.cpp  test_student.cpp  test_text.cpp  test_update_course.cpp  test_view_course_scoreboard.cpp  test_view_courses.cpp  test_view_enrolled_courses.cpp  test_view_scoreboard.cpp  test_view_student_scoreboard.cpp  testing.cpp
utils/: CSVParser.cpp  CSVParser.h  ClearScreen.cpp  ClearScreen.h  Date.cpp  Date.h  Input.cpp  Input.hpp  LinkedList.cpp  LinkedList.h  LinkedList.tpp  Menu.cpp  makeDir.cpp  makeDir.h
(+21 files in other folders)
